fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC3031UrlCheck1Rule.dsl
test 1 urlCheckEvent1:
    2019/02/22 01:12:34:
        urlCheck1Event:
            media: "YSS"
            accountId: 303101
            campaignId: 303111
            campaignName: "campaginName303101"
            adGroupId: 303111
            adGroupName: "adgroupName303101"
            keywordId: 303111
            keyword: "keyword303101"
            trackingUrlTemplate: "123 "
            finalUrls: " 23423"
            finalMobileUrls: " aa bbb"
            finalAppUrls: "dasd"